icon_DATA = bigboard-bulb.png bigboard-bulb-bw.png bigboard-collapse.png bigboard-document.png bigboard-down-arrow-disabled.png bigboard-down-arrow-enabled.png bigboard-expand.png bigboard-left-button.png bigboard-music.png bigboard-presentation.png bigboard-right-button.png bigboard-spreadsheet.png bigboard-today-disabled.png bigboard-today-enabled.png bigboard-up-arrow-disabled.png bigboard-up-arrow-enabled.png windows_key.png ctrl_esc_keys.png
icondir = $(datadir)/bigboard

theme_DATA = theme-fedora.xml
themedir = $(datadir)/bigboard

EXTRA_DIST= $(icon_DATA) $(theme_DATA)

